--- a/ZakazanaDzungla/ZakazanaDzungla.vcxproj
+++ b/ZakazanaDzungla/ZakazanaDzungla.vcxproj
@@ -135,6 +135,7 @@
   <ItemGroup>
     <ClCompile Include="background.cpp" />
     <ClCompile Include="bohater.cpp" />
+    <ClCompile Include="bullet.cpp" />
     <ClCompile Include="enemies.cpp" />
     <ClCompile Include="entities.cpp" />
     <ClCompile Include="game.cpp" />
@@ -149,6 +150,7 @@
   <ItemGroup>
     <ClInclude Include="background.h" />
     <ClInclude Include="bohater.h" />
+    <ClInclude Include="bullet.h" />
     <ClInclude Include="enemies.h" />
     <ClInclude Include="entities.h" />
     <ClInclude Include="game.h" />
